# fattureincloud-rs

./: README.md  openapi-config.json
rust-client/: Cargo.toml  README.md
rust-client/.openapi-generator/: FILES
rust-client/docs/: ArchiveApi.md  ArchiveDocument.md  ArchiveDocument1.md  ArchiveDocument2.md  AttachmentData.md  CashbookApi.md  CashbookEntry.md  CashbookEntry1.md  CashbookEntry1Document.md  CashbookEntry2.md  CashbookEntryDocument.md  City.md  Client.md  Client1.md  Client2.md  ClientsApi.md  CompaniesApi.md  Company.md  CompanyInfo.md  CompanyInfoAccessInfo.md  CompanyInfoPlanInfo.md  CompanyInfoPlanInfoFunctions.md  CompanyInfoPlanInfoFunctionsStatus.md  CompanyInfoPlanInfoLimits.md  CompanyPlanUsage.md  ControlledCompany.md  CreateArchiveDocumentRequest.md  CreateArchiveDocumentResponse.md  CreateCashbookEntryRequest.md  CreateCashbookEntryResponse.md  CreateClientRequest.md  CreateClientResponse.md  CreateF24Request.md  CreateF24Response.md  CreateIssuedDocumentRequest.md  CreateIssuedDocumentResponse.md  CreatePaymentAccountRequest.md  CreatePaymentAccountResponse.md  CreatePaymentMethodRequest.md  CreatePaymentMethodResponse.md  (+219 more)
rust-client/src/apis/: archive_api.rs  cashbook_api.rs  clients_api.rs  companies_api.rs  configuration.rs  emails_api.rs  info_api.rs  issued_documents_api.rs  issued_e_invoices_api.rs  mod.rs  products_api.rs  receipts_api.rs  received_documents_api.rs  settings_api.rs  suppliers_api.rs  taxes_api.rs  user_api.rs  webhooks_api.rs
rust-client/src/models/: archive_document.rs  archive_document_1.rs  archive_document_2.rs  attachment_data.rs  cashbook_entry.rs  cashbook_entry_1.rs  cashbook_entry_1_document.rs  cashbook_entry_2.rs  cashbook_entry_document.rs  city.rs  client.rs  client_1.rs  client_2.rs  company.rs  company_info.rs  company_info_access_info.rs  company_info_plan_info.rs  company_info_plan_info_functions.rs  company_info_plan_info_functions_status.rs  company_info_plan_info_limits.rs  company_plan_usage.rs  controlled_company.rs  create_archive_document_request.rs  create_archive_document_response.rs  create_cashbook_entry_request.rs  create_cashbook_entry_response.rs  create_client_request.rs  create_client_response.rs  create_f24_request.rs  create_f24_response.rs  (+214 more)
(+5 files in other folders)
